--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1019,8 +1019,36 @@ footer {
 }
 
 @media(max-width:767.98px) {
-    .menu-list {
+    header nav {
         display: none;
+        position: absolute;
+        top: 10rem;
+        right: 0; 
+        z-index: 1;
+        width: 60vw;
+        height: calc(100vh - 10rem);
+        background-color: var(--opacity-color);
+        overflow-y: scroll;
+    }
+    header nav::-webkit-scrollbar {
+        display: none;
+    }
+    .menu-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .menu-list li {
+        height: 5rem;
+    }
+    .menu-list li a {
+        padding: 0.1rem;
+        text-align: center;
+        font-size: 1.7rem;
+        font-weight: bold;
+    }
+    .menu-list li a:hover {
+        color: var(--beige-color)
     }
     .menu-button {
         cursor: pointer;
@@ -1031,7 +1059,7 @@ footer {
     .menu-line {
         width: 4rem;
         height: 0.5rem;
-        background-color: var(--white-color);
+        background-color: var(--beige-color);
     }
     .section-aboutus {
         flex-direction: column-reverse;
