--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -133,6 +133,8 @@ header {
     height: 10rem;
     width: 100%;
     background-color: var(--black-color);
+    position: fixed;
+    z-index: 1;
 }
 .menu-button {
     display: none;
@@ -312,7 +314,7 @@ header {
     overflow-x: scroll;
 }
 .projects-filter::-webkit-scrollbar {
-    display: none
+    display: none;
 }
 
 .projects-filter ul {
@@ -1026,7 +1028,7 @@ footer {
         right: 0; 
         z-index: 1;
         width: 60vw;
-        height: calc(100vh - 10rem);
+        height: calc(100vh);
         background-color: var(--opacity-color);
         overflow-y: scroll;
     }
@@ -1115,6 +1117,9 @@ footer {
     .banner .slide-area h2 {
         font-size: 2rem;
     }
+    .banner .slide {
+        width: 100vw;
+    }
     .share-section {
         display: flex;
         flex-direction: column;
@@ -1140,6 +1145,9 @@ footer {
     }
     .banner .slide-area h2 {
         font-size: 1.5rem;
+    }
+    .banner .slide-area {
+        margin: 0 auto;
     }
     .arrow-up {
         width: 5rem;
